# moose-core

./: .clang-format  .gitignore  CHANGELOG.md  README.md  meson.build  pyproject.toml
.github/workflows/: build-deploy-docs.yml  build-docs.yml  package.yml  pymoose.yml
basecode/: Cinfo.cpp  Cinfo.h  ObjId.h
biophysics/: Neuron.cpp  ReadSwc.cpp  ReadSwc.h  SwcSegment.cpp  SwcSegment.h
builtins/: Function.cpp  Function.h  HDF5DataWriter.cpp  HDF5DataWriter.h  HDF5WriterBase.cpp  HDF5WriterBase.h  MooseParser.cpp  MooseParser.h  NSDFWriter.cpp  Variable.h
devel/issues/: issue_124.py  issue_34.py  issue_45.py
device/: DiffAmp.cpp
docs/source/: advanced.rst  beginner.rst  conf.py  index.rst  intermediate.rst
intfire/: AdExIF.cpp
kinetics/: ReadKkit.cpp
ksolve/: Stoich.cpp
pybind11/: helper.h
pymoose/: Finfo.cpp  Finfo.h  MooseVec.cpp  MooseVec.h  PyRun.cpp  PyRun.h  docs.h  helper.cpp  meson.build  pymoose.cpp  pymoose.h
python/moose/: __init__.py  fixXreacs.py  hdfutil.py  model_utils.py  moose_constants.py  moose_legacy.py  network_utils.py  plot_utils.py  print_utils.py  server.py  swc_utils.py  utils.py
shell/: LoadModels.cpp  Shell.h
tests/core/: test_Xdiff1.py  test_channels.py  test_connectionLists.py  test_function.py  test_function_change_expr.py  test_function_chemsys.py  test_function_controls_reac_rate.py.broken  test_function_example.py  test_hhchan.py  test_hhchanf.py  test_hhchanf2d.py  test_hsolve_externalCalcium.py  test_ksolve.py  test_ksolve_parallel.py  test_moose_attribs.py  test_moose_paths.py  test_pyrun.py  test_suit1.py  (+4 more)
(+35 files in other folders)
